--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@
 }
 
 .row_clientes_1 {
-    padding-top: 7%;
-    padding-bottom: 5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .title_ubicanos {
@@ -265,8 +265,8 @@ li {
 .container_proje {
     padding-top: 10%;
     padding-top: 4%;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .text_servicios {
@@ -1260,7 +1260,7 @@ li {
     margin-bottom: 5%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1000px) {
     .carousel-item {
         margin-right: auto !important;
     }
@@ -1459,3 +1459,47 @@ h1:nth-child(4) {
 .modal-dialog-centered {
     max-width: 300px !important;
 }
+
+.modal-fcb-software {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    min-height: calc(100% - 1rem);
+  }
+  
+  .modal-fcb-software::before {
+    display: block;
+    height: calc(100vh - 1rem);
+    height: -webkit-min-content;
+    height: -moz-min-content;
+    height: min-content;
+    content: "";
+  }
+  
+  .modal-fcb-software.modal-dialog-scrollable {
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  .modal-fcb-software.modal-dialog-scrollable .modal-content {
+    max-height: none;
+  }
+  
+  .modal-fcb-software.modal-dialog-scrollable::before {
+    content: none;
+  }
+@media (min-width: 576px) {
+    .modal-fcb-software {
+      min-height: calc(100% - 3.5rem);
+    }
+    .modal-fcb-software::before {
+      height: calc(100vh - 3.5rem);
+      height: -webkit-min-content;
+      height: -moz-min-content;
+      height: min-content;
+    }
+  }
