--- a/css/style.css
+++ b/css/style.css
@@ -1657,3 +1657,6 @@ h1:nth-child(4) {
 .button-modal-crt:hover{
     background-color: #151f65;
 }
+.button-modal-crt:active{
+    background-color: #151f65;
+}
